fixed selector container gap

--- a/src/dc/components/passenger-selector/passenger-selector.module.scss
+++ b/src/dc/components/passenger-selector/passenger-selector.module.scss
@@ -26,7 +26,7 @@
   width: 280px;
   color: $glider-color-inputfields-text;
   background-color: $glider-color-inputfields-background;
-
+  margin: 8px 0 0 0;
 }
 
 
